--- a/components/cssParticles.css
+++ b/components/cssParticles.css
@@ -10,7 +10,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(-45deg, #1f2937, #111827, #1e3a8a, #1f2937);
+  background: linear-gradient(-45deg, #cac1c1, #7d8492, #d2d8e9, #000000);
   background-size: 400% 400%;
   animation: gradient 20s ease infinite;
   z-index: -1;
